--- a/backend/HSLogin/src/main/resources/application.yml
+++ b/backend/HSLogin/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/javahs1_eticaret
+    url: jdbc:postgresql://localhost:5432/EticaretDB
     username: postgres
     password: root
   jpa:
